<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Activity_hinario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        app:srcCompat="@drawable/back_seta" />


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_hinario"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerHinarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/imgZoomMais"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:background="@color/white"
            app:srcCompat="@drawable/zoom_mais" />

        <ImageButton
            android:id="@+id/imgZoomMenos"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            app:srcCompat="@drawable/zoom_menos" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtNomeDoHino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/txt_selecione_um_hino"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinnerHinos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="49dp" />

    <EditText
        android:id="@+id/editBuscaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:ems="10"
        android:hint="@string/txt_hint_edit_busca_hinos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="86dp" />

    <ScrollView
        android:id="@+id/scrollViewHino"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="175dp">

        <TextView
            android:id="@+id/txthinos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_letra_dos_hinos"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="7dp"
        app:cardCornerRadius="4dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="838dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgSetaEsquerdaHino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            app:srcCompat="@drawable/seta_esquerda_bibli"/>

            <TextView
                android:id="@+id/txtNumeroDoHino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/txt_numero_hino"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgSetaDireitaHino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:srcCompat="@drawable/seta_direita_bibli"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>