<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Activity_biblia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            app:srcCompat="@drawable/back_seta" />

        <TextView
        android:id="@+id/txtBibliaLivros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginStart="3dp"
        android:layout_gravity="center_vertical"
        android:text="@string/txt_biblia_livros"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgZoomMais"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="2dp"
        android:background="@color/white"
        app:srcCompat="@drawable/zoom_mais" />

    <ImageButton
        android:id="@+id/imgZoomMenos"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        app:srcCompat="@drawable/zoom_menos" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="4dp"
        android:elevation="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

    <Spinner
        android:id="@+id/spinnerLivros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerCapitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtVersiculo"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_texto_versiculos" />

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        android:elevation="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/imgSetaEsquerda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:srcCompat="@drawable/seta_esquerda_bibli" />

        <CheckBox
            android:id="@+id/chkLido"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/chk_marcar_como_lido" />


        <ImageButton
            android:id="@+id/imgSetaDireita"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:srcCompat="@drawable/seta_direita_bibli" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>